--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.4.3",
     "jszip": "^3.2.2",
     "vue": "^2.6.10",
+    "vue-gallery": "^2.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
