--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@sentry/browser": "^5.13.0",
+    "@sentry/integrations": "^5.13.0",
     "core-js": "^3.4.3",
     "jszip": "^3.2.2",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.22.1",
     "vue-gallery": "^2.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
