--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@material/snackbar": "^5.1.0",
     "@sentry/browser": "^5.13.0",
     "@sentry/integrations": "^5.13.0",
     "core-js": "^3.4.3",
