--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
+    "minimist": "^1.2.2",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
