--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@material/snackbar": "^5.1.0",
     "@sentry/browser": "^5.13.0",
     "@sentry/integrations": "^5.13.0",
     "core-js": "^3.4.3",
@@ -18,6 +17,7 @@
     "vue-gallery": "^2.0.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
+    "vue-snack": "^0.1.4",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
