--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sentry/browser": "^5.13.0",
     "@sentry/integrations": "^5.13.0",
     "core-js": "^3.4.3",
+    "ismobilejs": "^1.0.3",
     "jszip": "^3.2.2",
     "vue": "^2.6.10",
     "vue-analytics": "^5.22.1",
