--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue-snack": "^0.1.4",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "dot-prop": ">=5.1.1"
   },
   "devDependencies": {
     "minimist": "^1.2.2",
